--- a/Chatbot/data/nlu/nlu_errors.yml
+++ b/Chatbot/data/nlu/nlu_errors.yml
@@ -89,6 +89,11 @@ nlu:
     - esta mensagem de erro não estou entendendo
     - não estou entendendo este erro
     - este erro não estou entendendo
+    - não identifico o erro
+    - não entendo o erro
+    - nao sei onde esta o erro
+    - olá, não identifico o erro ajuda, por favor rsrs
+
 
 - regex: help error message
   examples: |
