--- a/Chatbot/domain/domain_exercise_tips.yml
+++ b/Chatbot/domain/domain_exercise_tips.yml
@@ -93,7 +93,7 @@ responses:
             —> A equação da area do círculo está no enunciado;
 
 
-            —> Para saber como fazer o quadrado de um número, me pergunte "Como fazer o quadrado de um número?"</text>'
+            Para saber como fazer o quadrado de um número, me pergunte "Como fazer o quadrado de um número?"</text>'
 
   # Diferença do produto
   utter_c7cd8e92-da1a-412a-a0b3-4498d031545a:
