Fixes test cases bug

--- a/Chatbot/data/nlu/nlu_exercícios.yml
+++ b/Chatbot/data/nlu/nlu_exercícios.yml
@@ -3,6 +3,7 @@ version: "3.1"
 nlu:
 - intent: ask_help
   examples: |
+    - me ajuda
     - preciso ajuda no exercicio
     - preciso de ajuda no exercicio
     - me ajuda com o exercicio?
