--- a/Chatbot/data/rules/rules.yml
+++ b/Chatbot/data/rules/rules.yml
@@ -15,3 +15,11 @@ rules:
   steps:
   - intent: bot_challenge
   - action: utter_iamabot
+
+- rule: Aks the user to rephrase when the message as low confidence (send suggestions)
+  condition:
+  - active_loop: null
+  steps:
+  - intent: nlu_fallback
+  - action: utter_please_rephrase
+  - action: action_question_suggestions
