--- a/Chatbot/data/rules/rules_answer_questions_all.yml
+++ b/Chatbot/data/rules/rules_answer_questions_all.yml
@@ -2,14 +2,6 @@ version: "3.1"
 
 rules:
 
-- rule: Aks the user to rephrase when the message as low confidence
-  condition:
-  - active_loop: null
-  steps:
-  - intent: nlu_fallback
-  - action: utter_please_rephrase
-  - action: action_question_suggestions
-
 - rule: No tips - when not in programming question
   condition:
   - active_loop: null
@@ -552,6 +544,46 @@ rules:
     - active_loop: null
   steps:
   - intent: ask_question_average
+  - action: action_answer_questions
+  - action: utter_did_that_help
+
+- rule: Answer question anytime the user asks one (Meters to Centimeters)
+  condition:
+    - active_loop: null
+  steps:
+  - intent: ask_question_centimeters
+  - action: action_answer_questions
+  - action: utter_did_that_help
+
+- rule: Answer question anytime the user asks one (Average)
+  condition:
+    - active_loop: null
+  steps:
+  - intent: ask_question_average
+  - action: action_answer_questions
+  - action: utter_did_that_help
+
+- rule: Answer question anytime the user asks one (Circle Area)
+  condition:
+    - active_loop: null
+  steps:
+  - intent: ask_question_circle_area
+  - action: action_answer_questions
+  - action: utter_did_that_help
+
+- rule: Answer question anytime the user asks one (Vowels and Consonants)
+  condition:
+    - active_loop: null
+  steps:
+  - intent: ask_question_consonant
+  - action: action_answer_questions
+  - action: utter_did_that_help
+
+- rule: Answer question anytime the user asks one (Hypotenuse)
+  condition:
+    - active_loop: null
+  steps:
+  - intent: ask_question_hypotenuse
   - action: action_answer_questions
   - action: utter_did_that_help
 
